First error free version with MainWindow and project view